@@ -1,4 +1,4 @@
-.TH phoronix-test-suite 1  "www.phoronix-test-suite.com" "9.8.0"
+.TH phoronix-test-suite 1  "www.phoronix-test-suite.com" "10.0.0m1"
 .SH NAME
 phoronix-test-suite \- The Phoronix Test Suite is an extensible open-source platform for performing testing and performance evaluation.
 .SH SYNOPSIS
@@ -256,6 +256,9 @@ This option is used if you wish to edit the title and description of an existing
 .TP
 .B extract-from-result-file [Test Result]
 This option will extract a single set of test results from a saved results file that contains multiple test results that have been merged. The user is the prompted to specify a new result file name and select which result identifier to extract.
+.TP
+.B keep-results-in-result-file [Test Result]
+This option is the inverse of the remove-results-from-result-file sub-command. If you wish to remove all results but those listed from a given result file, this option can be used. The user must specify a saved results file and then they will be prompted to provide a string to search for in keeping those results in that given result file but removing all other data.
 .TP
 .B merge-results [Test Result]  ...
 This option will manually merge multiple sets of test results generated by the Phoronix Test Suite.
