@@ -471,6 +471,9 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 <h3>extract-from-result-file<em>  [Test Result]</em>
 </h3>
 <p>This option will extract a single set of test results from a saved results file that contains multiple test results that have been merged. The user is the prompted to specify a new result file name and select which result identifier to extract.</p>
+<h3>keep-results-in-result-file<em>  [Test Result]</em>
+</h3>
+<p>This option is the inverse of the remove-results-from-result-file sub-command. If you wish to remove all results but those listed from a given result file, this option can be used. The user must specify a saved results file and then they will be prompted to provide a string to search for in keeping those results in that given result file but removing all other data.</p>
 <h3>merge-results<em>  [Test Result]  ...</em>
 </h3>
 <p>This option will manually merge multiple sets of test results generated by the Phoronix Test Suite.</p>
@@ -719,12 +722,18 @@ Supported Options:
   - all.hdd
   - hdd.read-speed
   - all.hdd.read-speed
+  - hdd.read-speed.sda
+  - hdd.read-speed.sdb
   - hdd.read-speed.nvme0n1
   - hdd.temp
   - all.hdd.temp
+  - hdd.temp.sda
+  - hdd.temp.sdb
   - hdd.temp.nvme0n1
   - hdd.write-speed
   - all.hdd.write-speed
+  - hdd.write-speed.sda
+  - hdd.write-speed.sdb
   - hdd.write-speed.nvme0n1
   - all.memory
   - memory.temp
@@ -1099,6 +1108,9 @@ In the event that a test profile fails to install or run, the following general 
 <h3>Network Subsystem Tests<em>  system/network</em>
 </h3>
 <p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a test of the network sub-system.</p>
+<h3>OpenMPI Tests<em>  system/openmpi</em>
+</h3>
+<p>This is a collection of test profiles having an external dependency on OpenMPI</p>
 <h3>Processor Subsystem Tests<em>  system/processor</em>
 </h3>
 <p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a test of the processor sub-system.</p>
@@ -1123,6 +1135,9 @@ In the event that a test profile fails to install or run, the following general 
 <h3>Cuda Tests<em>  system/cuda</em>
 </h3>
 <p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified via an internal tag as testing cuda.</p>
+<h3>Smp Tests<em>  system/smp</em>
+</h3>
+<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified via an internal tag as testing smp.</p>
 <h3>All Tests In Git<em>  git/all</em>
 </h3>
 <p>This is a collection of all supported test profiles found within the specified OpenBenchmarking.org repository.</p>
