@@ -284,6 +284,9 @@ This option is used if you wish to edit the title and description of an existing
 #### extract-from-result-file  [Test Result]
 This option will extract a single set of test results from a saved results file that contains multiple test results that have been merged. The user is the prompted to specify a new result file name and select which result identifier to extract.
 
+#### keep-results-in-result-file  [Test Result]
+This option is the inverse of the remove-results-from-result-file sub-command. If you wish to remove all results but those listed from a given result file, this option can be used. The user must specify a saved results file and then they will be prompted to provide a string to search for in keeping those results in that given result file but removing all other data.
+
 #### merge-results  [Test Result]  ...
 This option will manually merge multiple sets of test results generated by the Phoronix Test Suite.
 
@@ -611,12 +614,18 @@ Supported Options:
   - all.hdd
   - hdd.read-speed
   - all.hdd.read-speed
+  - hdd.read-speed.sda
+  - hdd.read-speed.sdb
   - hdd.read-speed.nvme0n1
   - hdd.temp
   - all.hdd.temp
+  - hdd.temp.sda
+  - hdd.temp.sdb
   - hdd.temp.nvme0n1
   - hdd.write-speed
   - all.hdd.write-speed
+  - hdd.write-speed.sda
+  - hdd.write-speed.sdb
   - hdd.write-speed.nvme0n1
   - all.memory
   - memory.temp
@@ -1181,6 +1190,9 @@ This is a collection of test profiles found within the specified OpenBenchmarkin
 #### Network Subsystem Tests  system/network
 This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a test of the network sub-system.
 
+#### OpenMPI Tests  system/openmpi
+This is a collection of test profiles having an external dependency on OpenMPI
+
 #### Processor Subsystem Tests  system/processor
 This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a test of the processor sub-system.
 
@@ -1204,6 +1216,9 @@ This is a collection of test profiles found within the specified OpenBenchmarkin
 
 #### Cuda Tests  system/cuda
 This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified via an internal tag as testing cuda.
+
+#### Smp Tests  system/smp
+This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified via an internal tag as testing smp.
 
 #### All Tests In Git  git/all
 This is a collection of all supported test profiles found within the specified OpenBenchmarking.org repository.
