@@ -171,6 +171,9 @@
 <h3>Network Subsystem Tests<em>  system/network</em>
 </h3>
 <p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a test of the network sub-system.</p>
+<h3>OpenMPI Tests<em>  system/openmpi</em>
+</h3>
+<p>This is a collection of test profiles having an external dependency on OpenMPI</p>
 <h3>Processor Subsystem Tests<em>  system/processor</em>
 </h3>
 <p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified as being a test of the processor sub-system.</p>
@@ -195,6 +198,9 @@
 <h3>Cuda Tests<em>  system/cuda</em>
 </h3>
 <p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified via an internal tag as testing cuda.</p>
+<h3>Smp Tests<em>  system/smp</em>
+</h3>
+<p>This is a collection of test profiles found within the specified OpenBenchmarking.org repository where the test profile is specified via an internal tag as testing smp.</p>
 <h3>All Tests In Git<em>  git/all</em>
 </h3>
 <p>This is a collection of all supported test profiles found within the specified OpenBenchmarking.org repository.</p>
